# imeth.cpp

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  README.md
.cache/clangd/index/: 2D.hpp.763C17FFAE25D44E.idx  3D.hpp.82484731A796EAB6.idx  algebra.cpp.5642714EE215CAC3.idx  algebra.hpp.A6AC5A0EC77E2434.idx  arithmetic.cpp.9CE151BED652D391.idx  arithmetic.hpp.C974A8262A24C0A6.idx  base.cpp.779F0DA8FCD52B6D.idx  base.hpp.AD9FB90A4DAB3989.idx  binary.cpp.18611334D2CE610A.idx  binary.hpp.7BB040B8C345B99C.idx  combinatoric.cpp.E6018CF338DAA1FC.idx  combinatoric.hpp.CE279D35FC38B4A8.idx  hexadecimal.cpp.5856031B07D72108.idx  hexadecimal.hpp.07E4717B3A2DF488.idx  logarithm.cpp.98082370A51EC2B7.idx  logarithm.hpp.608E74B02D9A324D.idx  main.cpp.CD92B2ADDF5EA6E2.idx  matrix.cpp.E1DC04D997DFFD95.idx  matrix.hpp.40554466514855A1.idx  octal.cpp.9BCC82D33713391F.idx  octal.hpp.15F156831B7A4BD4.idx  shape_2d.cpp.1968C5BAD21F6E75.idx  shape_3d.cpp.EB7EF82714AEF2D2.idx
.github/workflows/: cmake-multi-platform.yml  deploy.yml
cmake/: imethConfig.cmake.in
docs/: README.md  SUMMARY.md
docs/api/: overview.md
docs/api/base/: README.md  base.md  binary.md  hexadecimal.md  octal.md
docs/api/geometry/: 2D.md  3D.md  README.md
docs/api/linear/: README.md  algebra.md  matrix.md
docs/api/operation/: README.md  arithmetic.md  combinatoric.md  logarithm.md
docs/guide/: installation.md  quick-start.md  usage.md
examples/artihmetic calculator/: CMakeLists.txt  main.cpp
examples/base converter/: CMakeLists.txt  main.cpp
examples/data statistic/: CMakeLists.txt  main.cpp
examples/linear equation solver/: CMakeLists.txt  main.cpp
examples/shapes/: CMakeLists.txt  main.cpp
include/imeth/base/: base.hpp  binary.hpp  hexadecimal.hpp  octal.hpp
include/imeth/geometry/: 2D.hpp  3D.hpp
include/imeth/linear/: algebra.hpp  linear.hpp  matrix.hpp
include/imeth/operation/: arithmetic.hpp  combinatoric.hpp  logarithm.hpp
include/imeth/shape/: 2D.hpp  3D.hpp
src/: algebra.cpp  arithmetic.cpp  base.cpp  hexadecimal.cpp  linear.cpp  octal.cpp  shape_2d.cpp  shape_3d.cpp
src/base/: base.cpp  binary.cpp  hexadecimal.cpp  octal.cpp
src/geometry/: shape_2d.cpp  shape_3d.cpp
src/linear/: algebra.cpp  matrix.cpp
src/operation/: arithmetic.cpp  combinatoric.cpp  logarithm.cpp
tests/: main.cpp
